                   ========================

Version 1.1.5 to be released
----------------------------
- Bug #1130: Fixed the bug when renderDynamic and beginCache was used together without page caching (mdomba)
- Bug #1565: Fixed the bug that COutputCache may fail to work when used to cache whole pages (Qiang)
- Enh #1522: The attributes of CDetailView now support the property 'visible' (Y!!)
- Enh #1555: Added support to allow unloading/resetting an application component by calling CModule::setComponent() (Qiang)
- Enh #1560: Removed potential circular references in relational AR queries (Qiang)
- Enh #1568: Added support to import a directory recursively (Qiang)
- Chg: The javascript files of CListView and CGridView are now registered at the end of the page (Qiang)

Version 1.1.4 September 5, 2010
-------------------------------
- Bug #698: Now you can get and modify criteria of the current query in beforeFind() event handler (Sam Dark)
- Bug #1031: Fixed the bug that the filters in CGridView does not work in IE (Qiang)
- Bug #1119: Added CUploadedFile::reset() to make it more test-friendly (Qiang)
- Bug #1176: Fixed the bug that CVarDumper does't highlight well strings with quotes (Qiang)
- Bug #1376: Fixed the bug that the timestamps displayed in Web application log may not be formatted properly (Qiang)
- Bug #1377: Fixed the bug that CStarRating did not work when not setting the model property (Qiang)
- Bug #1382: Fixed space removal in CDbCriteria::compare() (Sam Dark)
- Bug #1384: SET NAMES problem with MSSQL PDO Provider (Qiang)
- Bug #1390: AR may lose precision if a column is declared as unsigned int for MySQL database (Qiang)
- Bug #1404: CSecurityManager::validateData() fails when the data is an array (Qiang)
- Bug #1408: CDbAuthManager may throw exception when unserializing data from auth items in PHP 5.3 (Qiang)
- Bug #1432: AR find methods with JOIN in query criteria may populate AR objects with attribute values belonging to other tables (Qiang)