@@ -7,6 +7,7 @@ Version 1.1.5 to be released
 - Bug #1130: Fixed the bug when renderDynamic and beginCache was used together without page caching (mdomba)
 - Bug #1565: Fixed the bug that COutputCache may fail to work when used to cache whole pages (Qiang)
 - Enh #1522: The attributes of CDetailView now support the property 'visible' (Y!!)
+- Enh #1546: Fixed the bug that disabling behaviors did not detach behavior event handlers (Qiang)
 - Enh #1555: Added support to allow unloading/resetting an application component by calling CModule::setComponent() (Qiang)
 - Enh #1560: Removed potential circular references in relational AR queries (Qiang)
 - Enh #1568: Added support to import a directory recursively (Qiang)
